Finally its sending traces :sparkles:

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,24 @@
+# Django settings
 DEBUG=True
 SECRET_KEY=django-insecure-&a_i#=szyg*h-8n*fijkw*dy%lii*x@bh8n1o5qny)af473^hw
 ALLOWED_HOSTS=localhost,127.0.0.1
 CSRF_TRUSTED_ORIGINS=http://localhost,http://127.0.0.1
+
+# Azure Blob Storage settings
 AZURE_CONNECTION_STRING=value
 AZURE_CONTAINER_NAME=test
+
+# PostgreSQL settings
 DB_NAME=over_engineered
 DB_USER=user
 DB_PASSWORD=password
 DB_HOST=database
 DB_PORT=5432
+
+# OTEL settings
+OTEL_SERVICE_NAME=backend
+OTEL_EXPORTER_OTLP_PROTOCOL=grpc
+OTEL_EXPORTER_OTLP_ENDPOINT=http://otel_collector:4317
+OTEL_TRACES_EXPORTER=otlp
+OTEL_RESOURCE_ATTRIBUTES=deployment.environment=local
+OTEL_EXPORTER_OTLP_INSECURE="True"
