--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "requests>=2.32.4",
     "opentelemetry-instrumentation-requests>=0.57b0",
     "opentelemetry-instrumentation-psycopg2>=0.57b0",
+    "opentelemetry-distro[otlp]>=0.57b0",
 ]
 
 [dependency-groups]
