Alloy setup done(atleast the base to build upon)

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ DB_PORT=5432
 # OTEL settings
 OTEL_SERVICE_NAME=backend
 OTEL_EXPORTER_OTLP_PROTOCOL=grpc
-OTEL_EXPORTER_OTLP_ENDPOINT=http://otel_collector:4317
+OTEL_EXPORTER_OTLP_ENDPOINT=http://alloy:4317
 OTEL_TRACES_EXPORTER=otlp
 OTEL_RESOURCE_ATTRIBUTES=deployment.environment=local
 OTEL_EXPORTER_OTLP_INSECURE="True"
