--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,12 @@ dependencies = [
     "djangorestframework>=3.16.1",
     "azure-storage-blob>=12.26.0",
     "psycopg[binary]>=3.2.9",
+    "opentelemetry-sdk>=1.36.0",
+    "opentelemetry-instrumentation-django>=0.57b0",
+    "requests>=2.32.4",
+    "opentelemetry-instrumentation-requests>=0.57b0",
+    "opentelemetry-instrumentation-psycopg2>=0.57b0",
+    "opentelemetry-distro[otlp]>=0.57b0",
 ]
 
 [dependency-groups]
