--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,9 +11,6 @@ services:
           target: app
           action: sync
 
-        - path: .
-          action: restart
-
         - path: ./pyproject.toml ./uv.lock
           action: rebuild
 
@@ -58,11 +55,6 @@ services:
       - "4317:4317"
       - "12345:12345"
 
-    develop:
-      watch:
-        - path: ./observability/config.alloy
-          action: restart
-
     volumes:
       - ./observability/config.alloy:/etc/alloy/config.alloy:ro
 
@@ -72,6 +64,25 @@ services:
           --stability.level=experimental
           /etc/alloy/config.alloy
 
+  init:
+    image: &tempoImage grafana/tempo:latest
+    user: root
+
+    entrypoint:
+      - "chown"
+      - "10001:10001"
+      - "/var/tempo"
+
+  tempo:
+    image: *tempoImage
+    command: ["-config.file=/etc/tempo.yaml"]
+
+    volumes:
+      - ./observability/tempo.yaml:/etc/tempo.yaml
+      #- ./tempo-data:/var/tempo
+
+    depends_on:
+      - init
 
 volumes:
   db_data:
