--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,7 @@ services:
         - path: .
           target: app
           action: sync
-        - path: .
-          action: restart
+
         - path: ./pyproject.toml ./uv.lock
           action: rebuild
 
@@ -34,11 +33,13 @@ services:
 
   database:
     image: postgres:17.6-alpine3.21
+
     depends_on:
       - alloy
 
     ports:
       - 5432:5432
+
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
@@ -47,31 +48,12 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
 
-#  otel_collector:
-#    image: otel/opentelemetry-collector:latest
-#    develop:
-#      watch:
-#        - path: ./observability/otel-collector-config.yaml
-#          action: restart
-#
-#
-#    volumes:
-#      - ./observability/otel-collector-config.yaml:/etc/otel-collector-config.yaml
-#
-#    command: ["--config=/etc/otel-collector-config.yaml"]
-
-
-
   alloy:
     image: grafana/alloy:latest
+
     ports:
       - "4317:4317"
       - "12345:12345"
-
-    develop:
-      watch:
-        - path: ./observability/config.alloy
-          action: restart
 
     volumes:
       - ./observability/config.alloy:/etc/alloy/config.alloy:ro
@@ -82,7 +64,25 @@ services:
           --stability.level=experimental
           /etc/alloy/config.alloy
 
+  init:
+    image: &tempoImage grafana/tempo:latest
+    user: root
+
+    entrypoint:
+      - "chown"
+      - "10001:10001"
+      - "/var/tempo"
+
+  tempo:
+    image: *tempoImage
+    command: ["-config.file=/etc/tempo.yaml"]
+
+    volumes:
+      - ./observability/tempo.yaml:/etc/tempo.yaml
+      #- ./tempo-data:/var/tempo
+
+    depends_on:
+      - init
 
 volumes:
   db_data:
-
